update to add decorators (in progress)

--- a/class_tutorial.ipynb
+++ b/class_tutorial.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -624,11 +624,293 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encapsulation and Attribute Access\n",
+    "\n",
+    "What if you want to define a class with attributes that are fixed at instantiation, so you or another user of your program can't edit them once they are set? If you don't need to access the attribute directly later, you can use *private attributes*. The syntax for these is also simple: just add two underscores between \"self.\" and the name of the variable. (For brevity, I'll drop the static and class methods.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class shark:\n",
+    "    def __init__(self, n_verses, which='Baby', species=None, gender=None): #'Baby' is the default value of attribute \"which\"\n",
+    "        self.which = which\n",
+    "        self.n_verses = n_verses\n",
+    "        self.species = species\n",
+    "        if gender is None:\n",
+    "            if which in ['Mommy', 'Grandma']:\n",
+    "                self.__gender = 'female'\n",
+    "            elif which in ['Daddy', 'Grandpa']:\n",
+    "                self.__gender = 'male'\n",
+    "            else:\n",
+    "                self.__gender = \"nobody's business\"\n",
+    "    \n",
+    "    def sing(self,family=None,segue=False):\n",
+    "        if family is not None:\n",
+    "            if type(family) is str:\n",
+    "                family = [family] #this just lets us enter a string if we only want 2 verses\n",
+    "            family.insert(0,self.which)\n",
+    "        else:\n",
+    "            family = [self.which]\n",
+    "        for s in family:\n",
+    "            for n in range(self.n_verses):\n",
+    "                print('{} shark doo doo doo doo doo doo'.format(s))\n",
+    "            if segue==True:\n",
+    "                print('{} shark!\\n'.format(s))\n",
+    "            else:\n",
+    "                print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=shark(1,gender='nonbinary')\n",
+    "print(b.gender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(b.__gender)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So now the private variable \"gender\" is set, but we can't access it using either the regular variable name or the internal attribute \"__gender\". We've successfully encapsulated it, i.e., we've protected the internal instance from the user of an object of this class...\n",
+    "\n",
+    "...but now they can't see it even if they need to. How do we let a user view a private variable?\n",
+    "\n",
+    "We add another class method to return the values, a brief one that takes \"self\" as an argument and returns the private attribute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class shark:\n",
+    "    def __init__(self, n_verses, which='Baby', species=None, gender=None): #'Baby' is the default value of attribute \"which\"\n",
+    "        self.which = which\n",
+    "        self.n_verses = n_verses\n",
+    "        self.species = species\n",
+    "        if gender is None:\n",
+    "            if which in ['Mommy', 'Grandma']:\n",
+    "                self.__gender = 'female'\n",
+    "            elif which in ['Daddy', 'Grandpa']:\n",
+    "                self.__gender = 'male'\n",
+    "            else:\n",
+    "                self.__gender = \"nobody's business\"\n",
+    "    \n",
+    "    def gender(self):\n",
+    "        return self.__gender\n",
+    "    \n",
+    "    def sing(self, family=None, segue=False):\n",
+    "        if family is not None:\n",
+    "            if type(family) is str:\n",
+    "                family = [family] #this just lets us enter a string if we only want 2 verses\n",
+    "            family.insert(0,self.which)\n",
+    "        else:\n",
+    "            family = [self.which]\n",
+    "        for s in family:\n",
+    "            for n in range(self.n_verses):\n",
+    "                print('{} shark doo doo doo doo doo doo'.format(s))\n",
+    "            if segue==True:\n",
+    "                print('{} shark!\\n'.format(s))\n",
+    "            else:\n",
+    "                print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = shark(1, gender = 'nonbinary')\n",
+    "print(b.gender())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Set and Get Methods\n",
+    "\n",
+    "In Python it's often a good idea to design class attributes such that accessing and setting them avoids the assignment operator, which is easily mishandled. This typically means encapsulating variables and then defining class methods to get and/or set them. This puts a layer of abstraction between the user and internal copy of the variable and makes the acts of accessing or setting the variables more deliberate.\n",
+    "\n",
+    "For the sake of further demonstration, I will also make \"species\" a private attribute."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class shark:\n",
+    "    def __init__(self, n_verses, which='Baby', species=None, gender=None): #'Baby' is the default value of attribute \"which\"\n",
+    "        self.which = which\n",
+    "        self.n_verses = n_verses\n",
+    "        self.__species = species\n",
+    "        if gender is None:\n",
+    "            if which in ['Mommy', 'Grandma', 'Sister']:\n",
+    "                self.__gender = 'female'\n",
+    "            elif which in ['Daddy', 'Grandpa', 'Brother']:\n",
+    "                self.__gender = 'male'\n",
+    "            else:\n",
+    "                self.__gender = \"nobody's business\"\n",
+    "\n",
+    "    def species(self):\n",
+    "        return self.__species   \n",
+    "    \n",
+    "    def gender(self):\n",
+    "        return self.__gender\n",
+    "    \n",
+    "    def set_species(self, value):\n",
+    "        self.__species = value\n",
+    "\n",
+    "    def set_gender(self, value):\n",
+    "        self.__gender = value\n",
+    "\n",
+    "    def set_deets(self, species, gender):\n",
+    "        self.__species = species\n",
+    "        self.__gender = gender\n",
+    "    \n",
+    "    def sing(self, family=None, segue=False):\n",
+    "        if family is not None:\n",
+    "            if type(family) is str:\n",
+    "                family = [family] #this just lets us enter a string if we only want 2 verses\n",
+    "            family.insert(0,self.which)\n",
+    "        else:\n",
+    "            family = [self.which]\n",
+    "        for s in family:\n",
+    "            for n in range(self.n_verses):\n",
+    "                print('{} shark doo doo doo doo doo doo'.format(s))\n",
+    "            if segue==True:\n",
+    "                print('{} shark!\\n'.format(s))\n",
+    "            else:\n",
+    "                print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = shark(2,'Cousin',species='mako',gender='female')\n",
+    "print(c.species())\n",
+    "\n",
+    "c.set_deets('lemon','nonbinary')\n",
+    "print(c.gender())\n",
+    "print(c.species())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decorators\n",
+    "\n",
+    "Before we describe decorators in terms of class definitions, let's back up and consider functions. If you've ever done model fitting (e.g. fitting a function with scipy.optimize.curve_fit()) or used functools.partial(), you know that functions can be passed as arguments to other functions, just like any other object. A function like functools.partial() is what's called a *wrapper* - it takes a function as an argument and modifies its behavior.\n",
+    "\n",
+    "Defining and wrapping functions can get very long-winded and messy, so decorators were created to streamline the process.\n",
+    "\n",
+    "Let's take the sing() out of shark() for a quick demo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vs=['Baby','Mommy','Daddy','Grandma','Grandpa',\"Let's go hunt\",'Run away','Safe at last',\"It's the end\"]\n",
+    "\n",
+    "def sing(nv=None):\n",
+    "    nv = random.randint(1,len(vs)-1) if nv is None else nv\n",
+    "    for s in v[0:nv]:\n",
+    "        for i in range(3):\n",
+    "            print('{}{} doo doo doo-doo doo-doo\\n'.format(s,' Shark' if ' ' not in s else \"\"))\n",
+    "        print('{} shark!\\n\\n'.format(s))\n",
+    "    return None\n",
+    "\n",
+    "from datetime import datetime\n",
+    "import random\n",
+    "\n",
+    "def stop4night(fxn):\n",
+    "    def wrapper(*args,**kwargs):\n",
+    "        print('Dun dun dun dun duh-dun duh-dun duh-dun duh-dun\\n')\n",
+    "        if 8<=datetime<22:\n",
+    "            return(\"Hey, people are tryin' ta sleep here!\")\n",
+    "        else:\n",
+    "            return fxn(*args,**kwargs)     \n",
+    "\n",
+    "sing = stop4night(sing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point you're probably wondering why I bothered nesting wrapper under the stop4night(fxn) definition line instead of putting fxn as the first arg of wrapper(). You'll see why in a moment.\n",
+    "\n",
+    "The outermost function around wrapper() and the last line comprise the decorator. This code block tells Python to wrap function sing() with stop4night() so that anyone who tries to start \"singing\" at night will get shouted down. Note that passing args and kwargs through the wrapper to the wrapped function requires \"*args, **kwargs\" in the () of both the inner function and the wrapper. If there are no args or kwargs to pass, those two sets of () can be left empty.\n",
+    "\n",
+    "There's a better way to write this, though, using the @ symbol (aka Pie syntax): Put the wrapping function first, then wrap the wrapper and use @ to reference this top-level function as shown below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vs=['Baby','Mommy','Daddy','Grandma','Grandpa',\"Let's go hunt\",'Run away','Safe at last',\"It's the end\"]\n",
+    "from datetime import datetime\n",
+    "import random\n",
+    "\n",
+    "def stop4night(fxn): #decorator part 1\n",
+    "    def wrapper(*args,**kwargs): #wrapper\n",
+    "        print('Dun dun dun dun duh-dun duh-dun duh-dun duh-dun\\n')\n",
+    "        if 8<=datetime<22:\n",
+    "            return(\"Hey, people are tryin' ta sleep here!\")\n",
+    "        else:\n",
+    "            return fxn(*args,**kwargs) \n",
+    "\n",
+    "@ stop4night #decorator part 2\n",
+    "def sing(nv=None): #function to wrap & decorate\n",
+    "    nv = random.randint(1,len(vs)-1) if nv is None else nv\n",
+    "    for s in v[0:nv]:\n",
+    "        for i in range(3):\n",
+    "            print('{}{} doo doo doo-doo doo-doo\\n'.format(s,' Shark' if ' ' not in s else \"\"))\n",
+    "        print('{} shark!\\n\\n'.format(s))\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more on decorators, I encourage readers to view https://realpython.com/primer-on-python-decorators/\n",
+    "\n",
+    "Now we can get back to our class definitions. Python has a pair of built-in decorators set aside for class methods, @property and @VAR.setter (where VAR is the name of a variable)."
+   ]
   }
  ],
  "metadata": {
