--- a/class_tutorial.ipynb
+++ b/class_tutorial.ipynb
@@ -161,7 +161,7 @@
     "        def __init__(self, args[, ...])\n",
     "            #more code\n",
     "\n",
-    "Arguments of __init__ (that's \"init\" with 2 underscores on each side) are what you want to require to create a new instance of this class. The first argument for __init__, and all subsequent methods within the class definition, must be \"self\" in order for those functions to receive the instance of your class (or, in the case of __init__, to receive the object that will become an instance of your class). Everything after that is optional. Technically a class doesn't have to have methods or attributes (but why would you create an empty class?).\n",
+    "Arguments of ``__init__`` (that's \"init\" with 2 underscores on each side) are what you want to require to create a new instance of this class. The first argument for ``__init__``, and all subsequent methods within the class definition, must be \"self\" in order for those functions to receive the instance of your class (or, in the case of ``__init__``, to receive the object that will become an instance of your class). Everything after that is optional. Technically a class doesn't have to have methods or attributes (but why would you create an empty class?).\n",
     "\n",
     "Let's start off with something simple: a class with one mandatory attribute, a couple optional attributes, and one method with a couple optional arguments."
    ]
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also modify attributes post-facto, check if a class is allowed to have an attribute with the hasattr() command (helpful if you don't have the source code in front of you), add attributes that you forgot to set with the setattr() command, or delete attributes with the del or delattr() commands. Keep in mind, deleting an attribute is not the same as restoring it to a default value, and setattr() cannot create attributes that are not included in your class defininition. "
+    "You can also modify attributes post-facto, check if a class is allowed to have an attribute with the ``hasattr()`` command (helpful if you don't have the source code in front of you), add attributes that you forgot to set with the ``setattr()`` command, or delete attributes with the ``del`` or ``delattr()`` commands. Keep in mind, deleting an attribute is not the same as restoring it to a default value, and ``setattr()`` cannot create attributes that are not included in your class defininition. "
    ]
   },
   {
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As with calling class methods, when creating a new instance of a class, the class name must be followed by parentheses even if __init__ has no required arguments. If n_verses was an optional attribute, you could create a new instance of class shark by setting a variable equal to shark(), but if you forgot the parentheses, your variable would be equal to the class itself.\n",
+    "As with calling class methods, when creating a new instance of a class, the class name must be followed by parentheses even if ``__init__`` has no required arguments. If n_verses was an optional attribute, you could create a new instance of class ``shark`` by setting a variable equal to ``shark()``, but if you forgot the parentheses, your variable would be equal to the class itself.\n",
     "\n",
     "That brings us to another funny little feature: you can set attributes at the class level if you forgot to add them to your class definition, and all subsequent new instances of that class will start out with that attribute. (This cannot be used to change the default values of attributes already included in the class definition.)"
    ]
@@ -307,9 +307,11 @@
     "One final comment on optional attributes: when you're creating a new instance of a class, note that both required and optional arguments are strictly positional. If you have a large number of optional attributes and you only want to set a specific one somewhere in the middle of the list, it might be better to set the attribute by name after creating the class instance.\n",
     "\n",
     "## Other Types of Methods\n",
-    "So far the methods I've covered have largely been the standard kind, which take \"self\" as the first argument. But there are two other kinds of methods: Static and Class methods.\n",
+    "So far the methods I've covered have largely been the standard kind, which take ``self`` as the first argument. But there are two other kinds of methods: Static and Class methods.\n",
     "\n",
-    "Static methods don't require \"self\" as an argument, and therefore can be used at both the instance level and the class level. The syntax is pretty much what you'd expect except for one crucial detail: you must type \"@staticmethod\" on the line above the def line. Let's add one to shark"
+    "Static methods don't require ``self`` as an argument, and therefore can be used at both the instance level and the class level. The syntax is pretty much what you'd expect except for one crucial detail: you must type ``@staticmethod`` on the line above the def line. As we'll discuss more later, ``@`` is used to designate what are called *decorators*, which are used to partially automate the modification of existing functions' behaviors and/or the production of new functions based on existing ones.\n",
+    "\n",
+    "Let's add a static method to ``shark``:"
    ]
   },
   {
@@ -385,9 +387,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Class methods receive the class, instead of an instance of the class, as their first argument. They have similar syntax to static methods in that you have to write @classmethod above the method definition. You can also invoke them at both the class and instance level.\n",
+    "Class methods receive the class, instead of an instance of the class, as their first argument. They have similar syntax to static methods in that you have to include the ``@classmethod`` decorator above the method definition. You can also invoke them at both the class and instance level.\n",
     "\n",
-    "There are 2 cases when you would use @classmethod instead of @staticmethod: 1) if your static method calls other static methods (particularly in inherited classes, which I'll get to momentarily), and 2) in the construction of what are called \"factory methods\". I have neither the knowledge nor the time to cover factory methods, but they sound like a way of dealing with complicated case statements."
+    "There are 2 cases when you would use @classmethod instead of @staticmethod: 1) if your static method calls other static methods (particularly in inherited classes, which I'll get to momentarily), and 2) in the construction of what are called \"factory methods\". I have neither the knowledge nor the time to cover factory methods, so instead I will refer interested readers to https://realpython.com/factory-method-python/ for a primer."
    ]
   },
   {
@@ -573,9 +575,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, if you include an __init__ statement in a subclass defined this way, you'll override the properties of the parent class. So what do you do if you want to, say, add required attributes but not change what is already included?\n",
+    "However, if you include an ``__init__  `` statement in a subclass defined this way, you'll override the properties of the parent class. So what do you do if you want to, say, add required attributes but not change what is already included?\n",
     "\n",
-    "You either include a call to the parent function, or more succinctly, use the super() function:"
+    "You either include a call to the parent function, or more succinctly, use the ``super()`` function:"
    ]
   },
   {
@@ -617,8 +619,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that you can insert the sub-class-specific attributes anywhere in the list of attributes after \"self\". However, note also that optional attributes must be defined again in the first __init__ statement in order to stay optional.\n",
-    "(I experimented with this a bit and I'm still couldn't tell you why it only works this way. Leaving \"which\" and \"species\" out of the def __init__ statement makes the class definition fail, defining their default values in the super() statement gives an attribute error saying the attribute is multiply-defined, leaving the default values out of the first __init__ statement made them required for the subclass)\n",
+    "Note that you can insert the sub-class-specific attributes anywhere in the list of attributes after ``self``. However, **note also that optional attributes must be defined again in the first ``__init__`` statement of the sub-class in order to stay optional.** \n",
+    "(I experimented with this a bit and I'm still couldn't tell you why it only works this way. Leaving \"which\" and \"species\" out of the def ``__init__`` statement makes the class definition fail, defining their default values in the ``super()`` statement gives an attribute error saying the attribute is multiply-defined, and leaving the default values out of the first ``__init__`` statement made them *required* for the subclass).\n",
     "\n",
     "Regardless of which method you use to pass properties of a parent class to a subclass, if you redefine a method in your subclass, the new method definition in the subclass overrides the method definition in the main class."
    ]
@@ -629,7 +631,7 @@
    "source": [
     "## Encapsulation and Attribute Access\n",
     "\n",
-    "What if you want to define a class with attributes that are fixed at instantiation, so you or another user of your program can't edit them once they are set? If you don't need to access the attribute directly later, you can use *private attributes*. The syntax for these is also simple: just add two underscores between \"self.\" and the name of the variable. (For brevity, I'll drop the static and class methods.)"
+    "What if you want to define a class with attributes that are fixed at instantiation, so you or another user of your program can't edit them once they are set? If you don't need to access the attribute directly later, you can use *private attributes*. The syntax for these is also simple: just add two underscores between ``self.`` and the name of the variable. (For brevity, I'll drop the static and class methods we added earlier.)"
    ]
   },
   {
@@ -751,7 +753,7 @@
    "source": [
     "#### Set and Get Methods\n",
     "\n",
-    "In Python it's often a good idea to design class attributes such that accessing and setting them avoids the assignment operator, which is easily mishandled. This typically means encapsulating variables and then defining class methods to get and/or set them. This puts a layer of abstraction between the user and internal copy of the variable and makes the acts of accessing or setting the variables more deliberate.\n",
+    "In Python it's often a good idea to design class attributes such that accessing and setting them avoids the assignment operator, which is easily mishandled. This typically means encapsulating variables and then defining class methods to get and/or set them. This puts a layer of abstraction between the user and internal copy of the variable and makes the acts of accessing or setting the variables more deliberate, and crucially, **allows the creator of the class to put constraints on the allowed values that the user can assign to a given attribute.** \n",
     "\n",
     "For the sake of further demonstration, I will also make \"species\" a private attribute."
    ]
@@ -762,34 +764,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "slur_corpus = \"Too risky to input manually and not worth the trouble of finding a corpus right now.\".split('')\n",
+    "# maybe I'll come back later and edit this with a real corpus from some fancy LLM package, but this will do for demo purposes.\n",
+    "\n",
     "class shark:\n",
     "    def __init__(self, n_verses, which='Baby', species=None, gender=None): #'Baby' is the default value of attribute \"which\"\n",
     "        self.which = which\n",
     "        self.n_verses = n_verses\n",
-    "        self.__species = species\n",
-    "        if gender is None:\n",
-    "            if which in ['Mommy', 'Grandma', 'Sister']:\n",
+    "        self.__species = set_species(species)\n",
+    "        self.__gender = set_gender(gender)\n",
+    "\n",
+    "    def set_gender(self, value): #setter 1 with filter\n",
+    "        if value is None:\n",
+    "            if self.which in ['Mommy', 'Grandma', 'Sister']:\n",
     "                self.__gender = 'female'\n",
     "            elif which in ['Daddy', 'Grandpa', 'Brother']:\n",
     "                self.__gender = 'male'\n",
     "            else:\n",
-    "                self.__gender = \"nobody's business\"\n",
-    "\n",
-    "    def species(self):\n",
-    "        return self.__species   \n",
-    "    \n",
-    "    def gender(self):\n",
-    "        return self.__gender\n",
-    "    \n",
-    "    def set_species(self, value):\n",
-    "        self.__species = value\n",
-    "\n",
-    "    def set_gender(self, value):\n",
-    "        self.__gender = value\n",
+    "                self.__gender = 'undeclared'\n",
+    "        elif value in slur_corpus or any(s in value.lower() for s in ['attack','helicopter','mayonnaise']):\n",
+    "            #if you understand why I included those last 3 strings, you have my condolences\n",
+    "            raise ValueError('Class shark() does not accept abusive language.')\n",
+    "        elif type(value) is not str:\n",
+    "            raise TypeError('Attribute \"gender\" must be a string or None.')\n",
+    "        else:\n",
+    "            self.__gender = value\n",
+    "        \n",
+    "    def set_species(self, value): #setter 2\n",
+    "        if value is not None and type(value) is not str:\n",
+    "            raise TypeError('Attribute \"species\" must be a string or None.')\n",
+    "        else:\n",
+    "            self.__species = value\n",
     "\n",
     "    def set_deets(self, species, gender):\n",
-    "        self.__species = species\n",
-    "        self.__gender = gender\n",
+    "        self.__species = self.set_species(species)\n",
+    "        #self.__gender = gender\n",
+    "        self.__gender = self.set_gender(gender) #this line is experimental\n",
+    "\n",
+    "    def species(self): #getter 1\n",
+    "        return self.__species   \n",
+    "    \n",
+    "    def gender(self): #getter 2\n",
+    "        return self.__gender\n",
     "    \n",
     "    def sing(self, family=None, segue=False):\n",
     "        if family is not None:\n",
@@ -827,11 +843,11 @@
    "source": [
     "## Decorators\n",
     "\n",
-    "Before we describe decorators in terms of class definitions, let's back up and consider functions. If you've ever done model fitting (e.g. fitting a function with scipy.optimize.curve_fit()) or used functools.partial(), you know that functions can be passed as arguments to other functions, just like any other object. A function like functools.partial() is what's called a *wrapper* - it takes a function as an argument and modifies its behavior.\n",
+    "Before we describe decorators in terms of class definitions, let's back up and consider functions. If you've ever done model fitting (e.g. fitting a function with ``scipy.optimize.curve_fit()``) or used ``functools.partial()``, you know that functions can be passed as arguments to other functions, just like any other object. A function that takes other functions as arguments to modify their behavior is what's called a *wrapper*.\n",
     "\n",
     "Defining and wrapping functions can get very long-winded and messy, so decorators were created to streamline the process.\n",
     "\n",
-    "Let's take the sing() out of shark() for a quick demo:"
+    "Let's take the ``sing()`` out of ``shark()`` for a quick demo:"
    ]
   },
   {
@@ -868,11 +884,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point you're probably wondering why I bothered nesting wrapper under the stop4night(fxn) definition line instead of putting fxn as the first arg of wrapper(). You'll see why in a moment.\n",
+    "At this point you're probably wondering why I bothered nesting wrapper under the ``stop4night(fxn)`` definition line instead of putting fxn as the first arg of ``wrapper()``. You'll see why in a moment.\n",
     "\n",
-    "The outermost function around wrapper() and the last line comprise the decorator. This code block tells Python to wrap function sing() with stop4night() so that anyone who tries to start \"singing\" at night will get shouted down. Note that passing args and kwargs through the wrapper to the wrapped function requires \"*args, **kwargs\" in the () of both the inner function and the wrapper. If there are no args or kwargs to pass, those two sets of () can be left empty.\n",
+    "The outermost function around ``wrapper()`` and the last line comprise the decorator. This code block tells Python to wrap function ``sing()`` with ``stop4night()`` so that anyone who tries to start \"singing\" at night will get shouted down. Note that passing args and kwargs through the wrapper to the wrapped function requires ``*args, **kwargs`` in the () of both the inner function and the wrapper. If there are no args or kwargs to pass, those two sets of () can be left empty.\n",
     "\n",
-    "There's a better way to write this, though, using the @ symbol (aka Pie syntax): Put the wrapping function first, then wrap the wrapper and use @ to reference this top-level function as shown below:"
+    "There's a better way to write this, though, using the ``@ ``symbol (aka Pie syntax): Put the wrapping function first, then wrap the wrapper and use ``@`` to reference this top-level function as shown below:"
    ]
   },
   {
@@ -907,9 +923,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more on decorators, I encourage readers to view https://realpython.com/primer-on-python-decorators/\n",
+    "We also saw this at work with the ``@staticmethod`` and ``@classmethod`` decorators, which modify the internal method generator code that handles ``def`` blocks within classes.\n",
     "\n",
-    "Now we can get back to our class definitions. Python has a pair of built-in decorators set aside for class methods, @property and @VAR.setter (where VAR is the name of a variable)."
+    "For more on decorators, I encourage readers to view https://realpython.com/primer-on-python-decorators/ and https://docs.python.org/3/library/functools.html. For now, just note that Python has some built-in decorators for various purposes, and many more that you can load with module ``functools``.\n",
+    "\n",
+    "Now we can get back to our class definitions. Besides the ``@staticmethod`` and ``@classmethod`` decorators, Python has two more decorators set aside for assigning class attributes: ``@property`` and ``@VAR.setter`` (where VAR is the name of a variable).\n",
+    "- ``@property`` takes a function method and creates a read-only attribute for the class. It's actually shorthand for ... (to do: incorporate material from https://www.programiz.com/python-programming/property)\n",
+    "- ``@VAR.setter`` \n",
+    "\n",
+    "⚠️UNDER CONSTRUCTION (please bear with me)⚠️\n"
    ]
   }
  ],
